force-app/main/default/objects/Review_Form__c/Review_Form__c.object-meta.xml
<CustomObject>
    <description>Represents a collection of components for field entry, used in review interfaces to populate fields in specified objects in the database.</description>
    <label>Review Form</label>
    <nameField>
        <label>Review Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>