force-app/main/default/objects/Review_Form__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if this review form is in active use</description>
    <inlineHelpText>Checked if this review form is in active use</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>