force-app/main/default/objects/Review_Form__c/fields/Num_components__c.field-meta.xml
<CustomField>
    <fullName>Num_components__c</fullName>
    <description>The number of active review form components belonging to this review form</description>
    <inlineHelpText>The number of active review form components belonging to this review form</inlineHelpText>
    <label>Num components</label>
    <summaryFilterItems>
        <field>Review_Form_Component__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Review_Form_Component__c.Review_Form__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>