force-app/main/default/objects/Review_Form__c/fields/Review_guide_URL__c.field-meta.xml
<CustomField>
    <fullName>Review_guide_URL__c</fullName>
    <description>URL for the documentation appropriate for this review form</description>
    <inlineHelpText>URL for the documentation appropriate for this review form</inlineHelpText>
    <label>Review guide URL</label>
    <type>Url</type>
</CustomField>